feat: support german lang; lang-specific prompts

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,7 +4,7 @@
     "userWidget.avatar.alt": "User avatar",
     "userWidget.toggle.narration": "Generate narration",
     "userWidget.toggle.randomEnding": "Add random element",
-    "userWidget.toggle.language": "Zmień na polski 🇵🇱",
+    "userWidget.toggle.language": "Change language",
     "userWidget.signOut": "Sign out",
     "storyInput.prefix": "Tell me a story about",
     "storyInput.submit": "Tell story ✨",
