--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -4,7 +4,7 @@
     "userWidget.avatar.alt": "Awatar użytkownika",
     "userWidget.toggle.narration": "Generuj narrację",
     "userWidget.toggle.randomEnding": "Dodaj losowy element",
-    "userWidget.toggle.language": "Change to English 🇬🇧",
+    "userWidget.toggle.language": "Zmień język",
     "userWidget.signOut": "Wyloguj",
     "storyInput.prefix": "Opowiedz mi historię o",
     "storyInput.submit": "Opowiedz ✨",
